--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -20,9 +20,7 @@
 }
 
 .slider .slick-arrow::before {
-    content: none;
-    display: flex;
-    justify-content: center;
+    position: absolute;
 }
 
 .slider .slick-arrow.slick-prev {
@@ -44,6 +42,8 @@
 .slider .slick-slide {
     display: flex !important;
     justify-content: center;
+    /* width: 200px; */
+    margin: 0 auto;
 }
 
 .popular-products-slider {
@@ -72,10 +72,14 @@
 
 .popular-products-slider .slick-arrow.slick-prev {
     background-image: url('../images/arrow-left-slider.png');
+    background-position: 49% center;
+    margin-left: -25px;
 }
 
 .popular-products-slider .slick-arrow.slick-next {
     background-image: url('../images/arrow-right-slider.png');
+    background-position: 55% center;
+    margin-right: -25px;
 }
 
 .popular-products-slider .slick-track {
@@ -90,6 +94,11 @@
 .popular-products-slider .popular-product {
     display: flex !important;
     flex-direction: column;
+    padding: 15px;
+    border-radius: 10px;
+    background-color: #1C1C24;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .popular-products-slider .popular-product .title {
