--- a/src/styles/slick-slider.css
+++ b/src/styles/slick-slider.css
@@ -42,13 +42,18 @@
 .slider .slick-slide {
     display: flex !important;
     justify-content: center;
-    /* width: 200px; */
     margin: 0 auto;
 }
 
 .popular-products-slider {
     margin-top: 30px;
     padding-bottom: 60px;
+}
+
+.popular-products-slider .slick-list {
+    cursor: grab;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .popular-products-slider .slick-arrow {
@@ -58,27 +63,34 @@
     border: 1px solid #1E75FF;
     border-radius: 10px;
     z-index: 1;
+    transition: 200ms;
 }
 
-.popular-products-slider .slick-arrow:hover,
+.popular-products-slider .slick-arrow:hover {
+    background-repeat: no-repeat;
+}
+
 .popular-products-slider .slick-arrow:focus {
     background-repeat: no-repeat;
-    background-position: center center;
 }
 
 .popular-products-slider .slick-arrow::before {
     content: none;
 }
 
+.popular-products-slider .slick-slide {
+    padding-top: 150px;
+}
+
 .popular-products-slider .slick-arrow.slick-prev {
     background-image: url('../images/arrow-left-slider.png');
-    background-position: 49.96% center;
+    background-position: 49% center;
     margin-left: -25px;
 }
 
 .popular-products-slider .slick-arrow.slick-next {
     background-image: url('../images/arrow-right-slider.png');
-    background-position: 54.7% center;
+    background-position: 55% center;
     margin-right: -25px;
 }
 
@@ -91,6 +103,14 @@
     justify-content: center;
 }
 
+.popular-products-slider .slick-slide .cover {
+    bottom: 150px;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    height: 300px;
+}
+
 .popular-products-slider .popular-product {
     display: flex !important;
     flex-direction: column;
@@ -99,6 +119,10 @@
     background-color: #1C1C24;
     width: 50%;
     margin: 0 auto;
+    max-height: 370px;
+    height: 300px;
+    justify-content: flex-end;
+    position: relative;
 }
 
 .popular-products-slider .popular-product .title {
@@ -110,6 +134,7 @@
     color: rgba(255, 255, 255, .8);
     font-size: .8rem;
     margin-top: 5px;
+    width: 300px;
 }
 
 .popular-products-slider .popular-product .buttons {
