--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -27,7 +27,7 @@
 }
 
 .slider .slick-arrow::before {
-    position: absolute;
+    content: none;
 }
 
 .slider .slick-arrow.slick-prev {
@@ -170,13 +170,13 @@
 /*!***********************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/auth.css ***!
   \***********************************************************************/
-.auth-form {
+/* .auth-form {
     width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
     left: 0;
-    background-image: url(/images/not-found.png);
+    background-image: url('../images/backgrounds/not-found.png');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
@@ -184,32 +184,43 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+} */
+
+.auth-form {
+    position: absolute;
+    top: 25px;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    transition: 500ms;
+    width: 450px;
 }
 
-.auth-form .container {
-    max-width: 90%;
+.home .auth-form .container {
     background: #1C1C24;
-    padding: 1.25rem 1rem;
     font-size: 2rem;
+    padding: 20px 15px;
     border-radius: 15px;
     margin: auto;
+    flex-direction: column;
 }
 
 .auth-form .heading {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100%;
 }
 
 .auth-form .heading .authorization {
     font-size: 2rem;
 }
-
+/* 
 .auth-form .heading .close-modal {
     text-decoration: none;
     display: flex;
     align-items: center;
-}
+} */
 
 .auth-form .heading .close-modal .close-icon {
     fill: #1E75FF;
@@ -219,8 +230,6 @@
 .auth-form .form {
     display: flex;
     flex-direction: column;
-    width: 30vw;
-    min-width: 100%;
 }
 
 .auth-form .error {
@@ -331,13 +340,18 @@
     font-size: .85rem;
 }
 
-.auth-form .addition a {
+.auth-form .addition button {
     color: #fff;
     text-decoration: none;
+    border: none;
+    background: none;
+    cursor: pointer;
 }
 
 .signup .close-modal {
-    margin-left: 3vw;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 
 .signup .form {
@@ -352,13 +366,19 @@
     flex-direction: row;
     justify-content: space-between;
 }
-
+/* 
 @media (max-width: 800px) {
     .auth-form  .signin-form {
         width: 70vw;
     }
     .auth-form .signin-form fieldset {
         width: 100%;
+    }
+} */
+
+@media (max-width: 500px) {
+    .auth-form {
+        width: 95%;
     }
 }
 
@@ -403,12 +423,12 @@
 }
 
 :root {
-    font-size: 15vw - 1vh;
+    /* font-size: 15vw - 1vh; */
+    color: #fff !important;
 }
 
 html {
     background-color: #020100;
-    color: #fff;
     width: 100%;
     height: 100%;
 }
@@ -593,6 +613,8 @@ fieldset {
     transition: 200ms;
     text-decoration: none;
     text-transform: uppercase;
+    background: transparent;
+    cursor: pointer;
 }
 
 .home .nav .auth-buttons .button:hover {
@@ -780,6 +802,7 @@ fieldset {
 .dashboard .nav .links .links-wrap {
     display: flex;
     height: 100%;
+    position: relative;
 }
 
 .dashboard .nav .links .icon {
@@ -794,6 +817,11 @@ fieldset {
     height: 100%;
     padding: 10px;
     border-bottom: 3px solid transparent;
+    position: relative;
+}
+
+.dashboard .nav .links .link-item {
+    position: relative;
 }
 
 .dashboard .nav .links a + a {
@@ -802,7 +830,19 @@ fieldset {
 
 .dashboard .nav .links a.active {
     color: #1E75FF;
-    border-bottom: 3px solid #1E75FF;
+    position: relative;
+}
+
+.dashboard .nav .links-wrap .link-item.active .border-bottom {
+    transition: 200ms;
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    width: 100%;
+    height: 3px;
+    background-color: #1E75FF;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 
 .dashboard .nav .three-dots {
@@ -2507,84 +2547,3 @@ fieldset {
     }
 }
 
-/*!***************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/notfound.css ***!
-  \***************************************************************************/
-.not-found {
-    background-image: url(/images/not-found.png);
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-color: black;
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.not-found h2 {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    /* font-size: 36px; */
-    line-height: 36px;
-    text-align: center;
-}
-
-.not-found .content {
-    display: flex;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 1.05vw;
-    line-height: 22px;
-    margin: 18px auto 0 auto;
-    max-width: 350px;
-    text-align: center;
-}
-
-.not-found .error {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 3vw;
-}
-
-.not-found .error .four {
-    font-size: 20vw;
-    color: #fff;
-    opacity: .1;
-    font-family: 'Roboto', sans-serif;
-}
-
-.not-found .error .four:nth-of-type(1) {
-    margin-right: 5vw;
-}
-
-.not-found .error .four:nth-of-type(2) {
-    margin-left: 5vw;
-}
-
-.not-found .error .logo {
-    width: 20vw;
-}
-
-.not-found .link {
-    display: flex;
-    justify-content: center;
-}
-
-.not-found .link .link-to-home {
-    margin-top: 3vw;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    color: #fff;
-    text-decoration: none;
-    background-color: #1E75FF;
-    padding: 1vw 3.5vw;
-    border-radius: 1vw;
-    font-size: 1.2vw;
-}
