--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -833,10 +833,20 @@ fieldset {
     justify-content: space-between;
 }
 
+.home .slider-wrap .info .popular-products {
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+    line-height: 72px;
+    font-weight: 600;
+}
+
 .home .slider-wrap .info .date {
     color: #fe0000;
     font-weight: 600;
-    font-size: 1.7rem;
+    font-size: 30px;
+    line-height: 72px;
+    font-family: 'Roboto', sans-serif;
+
 }
 
 .home .slider-wrap .pop-products {
@@ -881,13 +891,17 @@ fieldset {
     color: #fa0707;
     font-weight: 500;
     font-family: Roboto, sans-serif;
+    font-size: 16px;
 }
 
 .home .slider .pop-product .title {
     text-transform: uppercase;
     font-weight: 700;
+    font-family: Roboto, sans-serif;
+    font-size: 16px;
     margin-top: 10px;
     font-family: Roboto, sans-serif;
+    letter-spacing: 1px;
 }
 
 .home .advantages {
@@ -906,15 +920,12 @@ fieldset {
     flex-basis: 30%;
     margin: 30px auto 0 auto;
     position: relative;
-    padding: 20px 20px 50px 20px;
-    background-position: center center;
-    background-size: cover;
+    padding: 40px 30px 50px 30px;
 }
 
 .home .advantages .advantage .advantage-title {
     letter-spacing: 1px;
     font-size: 1.3rem;
-    line-height: 36px;
     margin-top: 20px;
     color: #ffffff;
     font-weight: 700;
@@ -925,11 +936,33 @@ fieldset {
 .home .advantages .advantage .content {
     font-size: 14px;
     line-height: 24px;
-    color: rgba(255, 255, 255, .7);
+    color: rgba(255, 255, 255, .4);
     font-weight: 400;
     font-family: "Roboto", sans-serif;
-    margin-top: 10px;
     display: inline-block;
+    margin-top: 25px;
+} 
+
+.home .advantages .advantage .character {
+    position: absolute;
+    top: 35px;
+    right: 10px;
+}
+
+.home .advantages .advantage3 .character {
+    right: -15px;
+}
+
+.home .advantages .advantage4 .character {
+    right: 50px;
+}
+
+.home .advantages .advantage5 .character {
+    right: 35px;
+}
+
+.home .advantages .advantage6 .character {
+    right: 40px;
 }
 
 .home .advantages .advantage .bottom-line {
@@ -950,39 +983,53 @@ fieldset {
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-}
-
-.home .advantages .advantage .background:nth-child(even) {
-    background-image: url(/images/advantages-even.jpg);
-}
-
-.home .advantages .advantage .background:nth-child(odd) {
     background-image: url(/images/advantages-odd.jpg);
-    opacity: .1;
+    opacity: .05;
+    z-index: -2;
+}
+
+.home .advantages .advantage .even-bg {
+    background-image: url(/images/advantages-even.jpg);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    z-index: -1;
 }
 
 .home .footer-wrap {
     background-image: url(/images/footer.jpg);
-    background-position: center center;
+    background-position: top center;
     background-size: cover;
 }
 
 .home .footer-wrap .instruction {
     text-align: center;
+    width: 100%;
 }
 
-.home .steps .container {
+.home .steps .container:first-child {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    margin-top: 60px;
     padding-top: 150px;
     border-top: 1px solid #1b1b1b;
 }
 
+.home .steps .container:nth-child(2) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 60px;
+}
+
 .home .steps .red-line {
-    width: 50px;
-    height: 1px;
+    width: 70px;
+    height: 2px;
     background-color: #fa0707;
     margin-top: 100px;
 }
@@ -1002,15 +1049,56 @@ fieldset {
     position: relative;
 }
 
-.home .steps .icon {
+.home .steps .step .step-bg {
     width: 180px;
     height: 180px;
+    position: relative;
+    margin: 0 auto;
+}
+
+.home .steps .step .step-bg .bg {
     background-size: cover;
     background-position: center center;
-    margin: 0 auto;
     border-radius: 50%;
-    opacity: .3;
-    background-image: linear-gradient(rgb(6, 6, 6), #491011);
+    background-image: linear-gradient(rgb(6, 6, 6) 55%, #570f11);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: .4;
+}
+
+.home .steps .step .step-bg .character {
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: .15;
+}
+
+.home .steps .step2 .step-bg .character {
+    left: -35px;
+}
+
+.home .steps .step3 .step-bg .character {
+    left: -23px;
+    bottom: -1px;
+    transform: rotate(1deg);
+}
+
+.home .steps .step4 .step-bg .character {
+    left: 15px;
+    transform: rotate(-1deg);
+}
+
+.home .steps .step .step-bg .icon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    opacity: 1;
 }
 
 .home .steps .instruction-num {
@@ -1018,7 +1106,6 @@ fieldset {
     letter-spacing: 1px;
     line-height: 72px;
     color: #fa0707;
-    font-weight: 500;
     font-family: "Roboto", sans-serif;
     margin-top: 40px;
 }
@@ -1034,55 +1121,20 @@ fieldset {
     width: 100%;
 }
 
-@media (max-width: 950px) {
-    .home .steps .container {
-        margin-top: 0;
-    }
-    .home .steps .step {
-        flex-basis: 45%;
-        margin-top: 150px;
-    }
-    .home .steps .red-line {
-        margin-top: 250px;
-    }
-    .home .steps .red-line2 {
-        display: none;
-    }
-}
-
-@media (max-width: 530px) {
-    .home .steps .step {
+@media (max-width: 550px) {
+    .home .footer-wrap .steps .step {
         flex-basis: 90%;
         margin: 100px auto 0 auto;
     }
-    .home .steps .red-line2 {
+    .home .footer-wrap .steps .red-line2 {
         display: block;
     }
-    .home .steps .red-line {
+    .home .footer-wrap .steps .red-line {
         display: block;
         margin: 100px auto 0 auto;
         transform: rotate(90deg);
     }
 }
-
-/* .home .steps .step1 .icon {
-    background-image: url('../images/step1-icon.png');
-}
-
-.home .steps .step2 .icon {
-    background-image: url('../images/step2-icon.png');
-    width: 230px;
-}
-
-.home .steps .step3 .icon {
-    background-image: url('../images/step3-icon.png');
-    width: 210px;
-}
-
-.home .steps .step4 .icon {
-    background-image: url('../images/step4-icon.png');
-    width: 210px;
-} */
 
 .home .footer {
     margin-top: 150px;
@@ -2439,6 +2491,9 @@ fieldset {
     .home .nav .gray-line {
         height: 0;
     }
+    .home .steps .red-line {
+        width: 50px;
+    }
     .home .footer {
         display: flex;
         flex-direction: column-reverse;
@@ -2467,6 +2522,19 @@ fieldset {
 }
 
 @media (max-width: 1000px) {
+    .home .steps .container {
+        margin-top: 0;
+    }
+    .home .steps .step {
+        flex-basis: 45%;
+        margin-top: 150px;
+    }
+    .home .steps .red-line {
+        margin-top: 250px;
+    }
+    .home .steps .red-line2 {
+        display: none;
+    }
     .dashboard .main .lobby .info {
         width: 100%;
     }
