--- a/public/app.styles.css
+++ b/public/app.styles.css
@@ -300,7 +300,6 @@
 
 .home .auth-form .container {
     background: #1C1C24;
-    font-size: 2rem;
     padding: 30px 20px;
     border-radius: 15px;
     margin: auto;
@@ -316,10 +315,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-}
-
-.auth-form .heading .authorization {
-    font-size: 2rem;
 }
 
 .auth-form .heading .close-modal {
@@ -371,14 +366,14 @@
 
 .auth-form .form .field-wrap label {
     position: absolute;
-    left: .5rem;
+    left: 15px;
     display: flex;
     align-items: center;
     line-height: 40px;
     pointer-events: none;
     background: transparent;
     transition: 300ms;
-    padding: 0 10px;
+    padding: 0;
     transform: translateX(0) translateY(0);
     color: #92929D;
 }
@@ -402,7 +397,8 @@
 
 .auth-form .form .field-wrap .field:focus + label,
 .auth-form .form .field-wrap .field:valid + label {
-    transform: translateX(5px) translateY(-7px);
+    transform: translateY(-7px);
+    padding: 0 10px;
     background-color: #1C1C24;
     line-height: 16px;
 }
@@ -442,7 +438,7 @@
 .auth-form .addition {
     margin-top: 30px;
     padding-top: 30px;
-    border-top: 1px solid gray;
+    border-top: 1px solid #44444F;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -523,36 +519,6 @@
     }
 }
 
-/*!********************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/resetPassword.css ***!
-  \********************************************************************************/
-.reset-password {
-    position: absolute;
-    background-image: url(/images/not-found.png);
-    background-position: center center;
-    background-size: cover;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.reset-password .container {
-    margin: auto;
-    height: 100%;
-    width: 100%;
-    border-radius: 15px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.reset-password .addition {
-    display: flex;
-    justify-content: space-between;
-}
-
 /*!****************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/styles/style.css (2) ***!
   \****************************************************************************/
@@ -563,15 +529,11 @@
     outline: none;
 }
 
-:root {
-    /* font-size: 15vw - 1vh; */
-    color: #fff !important;
-}
-
 html {
     background-color: #020100;
     width: 100%;
     height: 100%;
+    color: #fff;
 }
 
 body {
@@ -581,8 +543,6 @@ body {
     height: 100%;
     font-weight: 400;
     background-color: #020100;
-    color: #fff;
-    font-size: 1rem;
 }
 
 fieldset {
@@ -592,10 +552,6 @@ fieldset {
 #content {
     width: 100%;
     height: 100%;
-}
-
-.reset-password .reset-title {
-    color: #1E75FF;
 }
 
 .container {
@@ -773,6 +729,119 @@ fieldset {
 
 .home .nav .auth-buttons .button + .button {
     margin-left: 15px;
+}
+
+.home .forgot-password-modal {
+    transition: 200ms;
+    position: absolute;
+    top: 25px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    z-index: 1;
+    max-width: 370px;
+    padding: 30px 30px 35px;
+    background-color: #1C1C24;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px 5px #000000;
+}
+
+.home .forgot-password-modal .heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.home .forgot-password-modal .heading .close-modal {
+    fill: #1E75FF;
+    cursor: pointer;
+}
+
+.home .forgot-password-modal .forgot-password {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap {
+    position: relative;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap .field {
+    background-color: #292932;
+    border-radius: 10px;
+    padding: 15px;
+    border: 1px solid transparent;
+    width: 100%;
+    color: #fff;
+    transition: 300ms;
+    outline: none;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap .field:focus,
+.home .forgot-password-modal .forgot-password .field-wrap .field:valid {
+    background: transparent;
+    border: 1px solid #92929D;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap .field:focus + label,
+.home .forgot-password-modal .forgot-password .field-wrap .field:valid + label {
+    transform: translateY(-7px);
+    background: #1C1C24;
+    padding: 0 10px;
+    height: auto;
+    line-height: 16px;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap label {
+    position: absolute;
+    top: 0;
+    left: 15px;
+    line-height: 47px;
+    color: #92929D;
+    user-select: none;
+    pointer-events: none;
+    font-size: 14px;
+    letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
+    transition: 300ms;
+}
+
+.home .forgot-password-modal .forgot-password .reset-password {
+    width: 100%;
+    margin-top: 20px;
+    padding: 15px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    background-color: #1E75FF;
+    border: none;
+    color: #FAFAFB;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.home .forgot-password-modal .addition {
+    margin-top: 30px;
+    padding-top: 30px;
+    border-top: 1px solid #44444F;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 14px;
+}
+
+.home .forgot-password-modal .addition button {
+    font-weight: 500;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    color: #fff;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.home .forgot-password-modal .addition button:first-of-type {
+    color: #92929D;
 }
 
 .home .privacy-and-policy-agreement {
