--- a/src/styles/auth.css
+++ b/src/styles/auth.css
@@ -27,7 +27,6 @@
 
 .home .auth-form .container {
     background: #1C1C24;
-    font-size: 2rem;
     padding: 30px 20px;
     border-radius: 15px;
     margin: auto;
@@ -43,10 +42,6 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
-}
-
-.auth-form .heading .authorization {
-    font-size: 2rem;
 }
 
 .auth-form .heading .close-modal {
@@ -98,14 +93,14 @@
 
 .auth-form .form .field-wrap label {
     position: absolute;
-    left: .5rem;
+    left: 15px;
     display: flex;
     align-items: center;
     line-height: 40px;
     pointer-events: none;
     background: transparent;
     transition: 300ms;
-    padding: 0 10px;
+    padding: 0;
     transform: translateX(0) translateY(0);
     color: #92929D;
 }
@@ -129,7 +124,8 @@
 
 .auth-form .form .field-wrap .field:focus + label,
 .auth-form .form .field-wrap .field:valid + label {
-    transform: translateX(5px) translateY(-7px);
+    transform: translateY(-7px);
+    padding: 0 10px;
     background-color: #1C1C24;
     line-height: 16px;
 }
@@ -169,7 +165,7 @@
 .auth-form .addition {
     margin-top: 30px;
     padding-top: 30px;
-    border-top: 1px solid gray;
+    border-top: 1px solid #44444F;
     display: flex;
     flex-direction: column;
     text-align: center;
