--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,7 +2,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
 @import './slick-slider.css';
 @import './auth.css';
-@import './resetPassword.css';
 
 * {
     margin: 0;
@@ -11,15 +10,11 @@
     outline: none;
 }
 
-:root {
-    /* font-size: 15vw - 1vh; */
-    color: #fff !important;
-}
-
 html {
     background-color: #020100;
     width: 100%;
     height: 100%;
+    color: #fff;
 }
 
 body {
@@ -29,8 +24,6 @@ body {
     height: 100%;
     font-weight: 400;
     background-color: #020100;
-    color: #fff;
-    font-size: 1rem;
 }
 
 fieldset {
@@ -40,10 +33,6 @@ fieldset {
 #content {
     width: 100%;
     height: 100%;
-}
-
-.reset-password .reset-title {
-    color: #1E75FF;
 }
 
 .container {
@@ -221,6 +210,119 @@ fieldset {
 
 .home .nav .auth-buttons .button + .button {
     margin-left: 15px;
+}
+
+.home .forgot-password-modal {
+    transition: 200ms;
+    position: absolute;
+    top: 25px;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    z-index: 1;
+    max-width: 370px;
+    padding: 30px 30px 35px;
+    background-color: #1C1C24;
+    border-radius: 20px;
+    box-shadow: 0px 0px 20px 5px #000000;
+}
+
+.home .forgot-password-modal .heading {
+    display: flex;
+    justify-content: space-between;
+}
+
+.home .forgot-password-modal .heading .close-modal {
+    fill: #1E75FF;
+    cursor: pointer;
+}
+
+.home .forgot-password-modal .forgot-password {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap {
+    position: relative;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap .field {
+    background-color: #292932;
+    border-radius: 10px;
+    padding: 15px;
+    border: 1px solid transparent;
+    width: 100%;
+    color: #fff;
+    transition: 300ms;
+    outline: none;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap .field:focus,
+.home .forgot-password-modal .forgot-password .field-wrap .field:valid {
+    background: transparent;
+    border: 1px solid #92929D;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap .field:focus + label,
+.home .forgot-password-modal .forgot-password .field-wrap .field:valid + label {
+    transform: translateY(-7px);
+    background: #1C1C24;
+    padding: 0 10px;
+    height: auto;
+    line-height: 16px;
+}
+
+.home .forgot-password-modal .forgot-password .field-wrap label {
+    position: absolute;
+    top: 0;
+    left: 15px;
+    line-height: 47px;
+    color: #92929D;
+    user-select: none;
+    pointer-events: none;
+    font-size: 14px;
+    letter-spacing: .1px;
+    font-family: Roboto, sans-serif;
+    transition: 300ms;
+}
+
+.home .forgot-password-modal .forgot-password .reset-password {
+    width: 100%;
+    margin-top: 20px;
+    padding: 15px;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 18px;
+    background-color: #1E75FF;
+    border: none;
+    color: #FAFAFB;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.home .forgot-password-modal .addition {
+    margin-top: 30px;
+    padding-top: 30px;
+    border-top: 1px solid #44444F;
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    font-size: 14px;
+}
+
+.home .forgot-password-modal .addition button {
+    font-weight: 500;
+    font-family: Roboto, sans-serif;
+    font-size: 14px;
+    color: #fff;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.home .forgot-password-modal .addition button:first-of-type {
+    color: #92929D;
 }
 
 .home .privacy-and-policy-agreement {
